<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConferenceActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-120dp"
        android:gravity="center">

        <Switch
            android:id="@+id/play_only_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Play Only" />
    </LinearLayout>

    <org.webrtc.SurfaceViewRenderer
        android:id="@+id/publish_view_renderer"
        android:layout_width="144dp"
        android:layout_height="144dp"

        android:layout_gravity="center" />

    <TextView
        android:layout_marginTop="80dp"
        android:id="@+id/broadcasting_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="Broadcasting"
        android:visibility="gone"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="11sp"
        android:textStyle="bold"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:gravity="center">

        <Button
            android:id="@+id/control_audio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="Disable Audio"
            android:onClick="controlAudio" />

        <Button
            android:id="@+id/control_video_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Disable Video"
            android:layout_marginHorizontal="10dp"
            android:onClick="controlVideo" />

    </LinearLayout>

    <org.webrtc.SurfaceViewRenderer
        android:id="@+id/play_view_renderer1"
        android:layout_height="144dp"
        android:layout_width="144dp"
        android:layout_gravity="top|start"
        android:layout_margin="16dp" />
    <org.webrtc.SurfaceViewRenderer
        android:id="@+id/play_view_renderer2"
        android:layout_height="144dp"
        android:layout_width="144dp"
        android:layout_gravity="top|end"
        android:layout_margin="16dp"/>
    <org.webrtc.SurfaceViewRenderer
        android:id="@+id/play_view_renderer3"
        android:layout_height="144dp"
        android:layout_width="144dp"
        android:layout_gravity="bottom|start"
        android:layout_margin="16dp"/>
    <org.webrtc.SurfaceViewRenderer
        android:id="@+id/play_view_renderer4"
        android:layout_height="144dp"
        android:layout_width="144dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:gravity="center">
        <Button
            android:id="@+id/join_conference_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Join Conference"
            android:onClick="joinConference"
            />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/call_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    </FrameLayout>


</FrameLayout>